RESOLVED FIXED287511
[UnifiedPDF] [iOS] REGRESSION(290293@main): Content is not sharp on pinch zoom
https://bugs.webkit.org/show_bug.cgi?id=287511
Summary [UnifiedPDF] [iOS] REGRESSION(290293@main): Content is not sharp on pinch zoom
Abrar Rahman Protyasha
Reported 2025-02-11 13:53:45 PST
Namely, we should call into WebCore::Page::setPageScaleFactor() inside WebPage::updateVisibleContentRects(). Currently we do not because this jetsams the GPU process very easily.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-11 13:53:57 PST
Abrar Rahman Protyasha
Comment 2 2025-02-18 02:33:45 PST
EWS
Comment 3 2025-02-18 14:53:52 PST
Committed 290563@main (2689d158dbf1): <https://commits.webkit.org/290563@main> Reviewed commits have been landed. Closing PR #40757 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.